[project]
name = "grace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "astroid>=3.3.10",
    "bitsandbytes>=0.46.0",
    "dashscope>=1.23.6",
    "datasets>=3.6.0",
    "deepspeed>=0.17.1",
    "editdistance>=0.8.1",
    "fuzzywuzzy>=0.18.0",
    "hnswlib>=0.8.0",
    "javalang>=0.13.0",
    "libcst>=1.8.2",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "parso>=0.8.4",
    "pyan3>=1.2.0",
    "rank-bm25>=0.2.2",
    "ruff>=0.12.3",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.7.0",
    "staticfg>=0.9.5",
    "tiktoken>=0.9.0",
    "timeout-decorator>=0.5.0",
    "torch==2.6",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "tree-sitter==0.20.1",
    "tree-sitter-java==0.23.5",
    "wandb>=0.20.1",
]
